@@ -28,7 +28,6 @@ package it.tidalwave.northernwind.core.impl.filter;
 
 import it.tidalwave.northernwind.util.test.NorthernWindTestSupport;
 import javax.annotation.Nonnull;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import lombok.Getter;
@@ -104,11 +103,11 @@ public class NodeLinkWithContentMacroFilterTest extends NorthernWindTestSupport
           {
             {
               "<a href=\"$nodeLink(relativePath='/Blog', contentRelativePath='/Blog/Equipment/The title')$\">1</a>",
-              Arrays.asList("/Blog", "/Blog/Equipment/The title", null, null)
+              List.of("/Blog", "/Blog/Equipment/The title", null, null)
             },
             {
               "<a href=\"$nodeLink(relativePath='/Blog', contentRelativePath='/Blog/Equipment/The title', language='it')$\">1</a>",
-              Arrays.asList("/Blog", "/Blog/Equipment/The title", ", language='it'", "it")
+              List.of("/Blog", "/Blog/Equipment/The title", ", language='it'", "it")
             }
           };
       }
